# libretto

./: CONTENT_PREPARATION.md  Cargo.toml  DESIGN.md  INTERCHANGE_FORMAT.md  Makefile
crates/liberetto-acquire/: Cargo.toml
crates/liberetto-acquire/src/: lib.rs  murashev.rs  opera_arias.rs  output.rs  types.rs
crates/liberetto-cli/: Cargo.toml
crates/liberetto-cli/src/: main.rs
crates/liberetto-model/: Cargo.toml
crates/liberetto-model/src/: interchange.rs  lib.rs  timing_overlay.rs
crates/liberetto-parse/: Cargo.toml
crates/liberetto-parse/src/: cast.rs
crates/liberetto-validate/: Cargo.toml
crates/liberetto-validate/src/: lib.rs
crates/libretto-acquire/: Cargo.toml
crates/libretto-acquire/src/: lib.rs  murashev.rs  normalize.rs  opera_arias.rs  output.rs  types.rs
crates/libretto-cli/: Cargo.toml  build.rs
crates/libretto-cli/src/: main.rs
crates/libretto-model/: Cargo.toml
crates/libretto-model/src/: base_libretto.rs  estimate.rs  interchange.rs  lib.rs  merge.rs  resolve.rs  timing_overlay.rs
crates/libretto-parse/: Cargo.toml
crates/libretto-parse/src/: align.rs  cast.rs  lib.rs  segments.rs  structure.rs
crates/libretto-validate/: Cargo.toml
crates/libretto-validate/src/: lib.rs
docs/: pipeline.md  todo.md
notes/: murashev-api-investigation.md
