[package]
name = "liberetto-parse"
description = "Parse raw libretto text into structured base libretto JSON"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
regex = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
liberetto-model = { workspace = true }
