[package]
name = "libretto-cli"
description = "CLI tool for Libretto opera libretto processing"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "libretto"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
libretto-model = { workspace = true }
libretto-acquire = { workspace = true }
libretto-parse = { workspace = true }
libretto-validate = { workspace = true }

[build-dependencies]
chrono = "0.4"
