[package]
name = "libretto-model"
description = "Core data types for the Libretto opera libretto system"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
unicode-normalization = { workspace = true }
