[package]
name = "libretto-parse"
description = "Parse raw libretto text into structured base libretto JSON"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
regex = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libretto-model = { workspace = true }
