[package]
name = "libretto-validate"
description = "Validation for base libretto and timing overlay files"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
libretto-model = { workspace = true }
